--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,29 @@
 {
   "name": "e-commerce-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "e-commerce cloth store.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node ./src/server.js",
+    "dev": "nodemon ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "code-8",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.19.2"
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.5.2"
   },
   "devDependencies": {
+    "ejs": "^3.1.10",
     "nodemon": "^3.1.4"
   }
 }
