change on vercel.json

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -5,7 +5,8 @@
       "src": "vite.config.js",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "dist",
+        "buildCommand": "npm run build"
       }
     }
   ],
